# decoder-template-rust

./: Cargo.toml  README.md  deploy.sh  deployment.toml
migration/mainnet/: 2024-04-19-040119.json
migration/testnet/: 2024-04-03-030810.json
src/: decoder.rs  main.rs
