[package]
name = "spore-dobs-decoder"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
linked_list_allocator = "*"

spore-dob-721 = { git = "https://github.com/sporeprotocol/spore-dob-721" }

[profile.release]
overflow-checks = true
strip = true
opt-level = 's'
lto = true
codegen-units = 1
